--- a/header.css
+++ b/header.css
@@ -2,5 +2,41 @@
     width: 24px;
     height: 24px;
     background-image: url("./img/image.png");
-    display: inline;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: inline-block;
+}
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+.container-botao:checked .lista-menu{
+    display:block;
+}
+.cabecalho{
+    background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+.lista-menu-titulo{
+    color: var(--laranja);
+    font-weight: 700;
+}
+.lista-menu-item{
+    padding: 1em;
+    background-color: var(--branco);
+}
+.lista-menu-link{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+.container-botao{
+    display: none;
 }
