--- a/carrossel.css
+++ b/carrossel.css
@@ -18,3 +18,30 @@
     position: initial;
     margin: 0.5em 0;
 }
+
+.card_descriçao{
+display: flex;
+justify-content: space-between;
+}
+
+.card__botões {
+    display: flex;
+    justify-content: space-between;
+}
+
+.botões {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card {
+    background: var(--branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em
+}
+
+.descrição__título {
+    color: var(--laranja);
+}
