--- a/banner.css
+++ b/banner.css
@@ -29,3 +29,14 @@
     background: url("./img/image\ copy\ 5.png");
     background-position: 1em;
 }
+@media screen and (min-width: 1024px) {
+    .banner-titulo {
+        font-size: 36px;
+    }
+    .banner__pesquisa {
+        width: 50%;
+    }
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+}
