--- a/carrossel.css
+++ b/carrossel.css
@@ -1,4 +1,4 @@
-.carrossel-titulo{
+.carrossel-titulo {
     color: var(--laranja);
     background-color: var(--branco);
     text-align: center;
@@ -6,44 +6,58 @@
     font-size: 18px;
     font-weight: 700;
     padding: 1em 0 0.5em 0;
-}
-
-.swiper-slide img{
+  }
+  .swiper-slide img {
     width: 100%;
-}
-.swiper-button-prev, .swiper-button-next{
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
     display: none;
-}
-.swiper-pagination{
+  }
+  .swiper-pagination {
     position: initial;
     margin: 0.5em 0;
-}
-
-.card-descriçao{
-display: flex;
-justify-content: space-between;
-margin_botton: 00.5em;
-}
-
-.card-botões {
+  }
+  .card-descricao {
     display: flex;
     justify-content: space-between;
-}
-
-.botões {
+    margin-bottom: 0.5em;
+  }
+  .card-botoes {
     display: flex;
     justify-content: space-between;
-}
-
-.card {
+  }
+  .botoes{
+    display: flex;
+  }
+  .card {
     background: var(--branco);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     margin: 1em;
-    padding: 1em
-}
-
-.descrição-título {
+    padding: 1em;
+  }
+  .descricao-titulo{
     color: var(--laranja);
     font-weight: 700;
-}
+  }
+  .descricao-titulo-livro {
+    color: var(--azul);
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0.5em 0;
+  }
+  .descricao-texto {
+    font-size: 14px;
+  }
+  .botoes-item {
+    margin: 0 0.5em;
+  }
+  .botoes-ancora {
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
+  }
+  
