--- a/header.css
+++ b/header.css
@@ -6,41 +6,70 @@
     background-position: center;
     display: inline-block;
 }
-.lista-menu{
-    display: none;
-    position: absolute;
-    top: 100%;
-    width: 60vw;
-}
-.container-botao:checked .lista-menu{
-    display:block;
-}
-.cabecalho{
+.cabecalho {
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
 }
-.lista-menu-titulo{
-    color: var(--laranja);
-    font-weight: 700;
+
+.container {
+    display: flex;
+    align-items: center;
 }
-.lista-menu-item{
+
+.container-imagem {
+    padding: 1em;
+}
+
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+
+.container-botao:checked ~ .lista-menu {
+    display: block;
+}
+
+.lista-menu-titulo,
+.lista-menu-item {
     padding: 1em;
     background-color: var(--branco);
 }
-.lista-menu-link{
+
+.lista-menu-titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.lista-menu-link {
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
 }
-.container-botao{
+
+.container-botao {
     display: none;
 }
-@media screen and (min-width: 1024px) {}
-
-
-
+@media screen and (min-width: 1024px) {
+    .container-titulo,
+    .container-titulo-negrito {
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+    }
+    .container-titulo {
+        font-weight: 400;
+        display: block;
+    }
+    .container-titulo-negrito {
+        font-weight: 700;
+    }
+}
+.container-titulo {
+    display: none;
+}
