--- a/header.css
+++ b/header.css
@@ -34,7 +34,7 @@
     display: block;
 }
 
-.lista-menu-titulo,
+.lista-menu-titulo
 .lista-menu-item {
     padding: 1em;
     background-color: var(--branco);
