--- a/banner.css
+++ b/banner.css
@@ -40,3 +40,16 @@
         background-position: 7em;
     }
 }
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+    font-size: 36px;
+    
+    }
+    }
+    .banner-pesquisa {
+        width: 50%;
+    }
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+    
