--- a/carrossel.css
+++ b/carrossel.css
@@ -60,4 +60,13 @@
     font-weight: 700;
     text-decoration: none;
   }
+  @media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+    font-size: 26px;
+    
+    }
+    }
+    .swiper-pagination {
+      margin: 2em 0 3em 0;
+    }
   
