--- a/carrossel.css
+++ b/carrossel.css
@@ -69,4 +69,15 @@
     .swiper-pagination {
       margin: 2em 0 3em 0;
     }
-  
+    .swiper{
+      width: 60%;
+    }
+    .swiper-button-prev,
+    .swiper-button-next{
+      display: block;
+      top: 60%;
+    }
+  .card{
+    width: 40%;
+    margin: 2em auto;
+  }
