--- a/banner.css
+++ b/banner.css
@@ -33,15 +33,15 @@
     .banner-titulo {
         font-size: 36px;
     }
-    .banner__pesquisa {
+    .banner-pesquisa {
         width: 50%;
     }
-    .banner__pesquisa::placeholder {
+    .banner-pesquisa::placeholder {
         background-position: 7em;
     }
 }
 @media screen and (min-width: 1024px) {
-    .banner__titulo {
+    .banner-titulo {
     font-size: 36px;
     
     }
@@ -49,7 +49,7 @@
     .banner-pesquisa {
         width: 50%;
     }
-    .banner__pesquisa::placeholder {
+    .banner-pesquisa::placeholder {
         background-position: 7em;
     }
-    
+
