--- a/contato.css
+++ b/contato.css
@@ -62,3 +62,21 @@
     background: url(/img/Vector\ \(1\).png);
     padding-left: 2em;
 }
+@media screen and (min-width: 1024px) {
+    .contato {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    }
+    }
+    .contato-titulo{
+        font-size: 24px;
+    }
+    .contato-email{
+        width: 30%;
+    }
+    .contato-descricao{
+        margin-right: 1em;
+        width: 30%;
+    }
