--- a/header.css
+++ b/header.css
@@ -6,6 +6,14 @@
     background-position: center;
     display: inline-block;
 }
+.container-botao:checked~.container-rotulo>.cabeçalho-menu-hamburguer {
+    background-image: url("./img/Menu\ Aberto.png");
+}
+
+.container-botao:checked~.container-rotulo {
+    background: var(--azul-degrade);
+}
+
 .cabecalho {
     background-color: var(--branco);
     display: flex;
@@ -23,6 +31,7 @@
     padding: 1em;
 }
 
+
 .lista-menu {
     display: none;
     position: absolute;
@@ -30,11 +39,11 @@
     width: 60vw;
 }
 
-.container-botao:checked ~ .lista-menu {
+.container-botao:checked~.lista-menu {
     display: block;
 }
 
-.lista-menu-titulo
+.lista-menu-titulo,
 .lista-menu-item {
     padding: 1em;
     background-color: var(--branco);
@@ -45,7 +54,7 @@
     font-weight: 700;
 }
 
-.lista-menu-item {
+.lista-menu-link {
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -56,20 +65,103 @@
 .container-botao {
     display: none;
 }
+
+.container-titulo {
+    display: none;
+}
+
+.container-texto {
+    display: none;
+}
+
+.opcoes {
+    display: none
+}
+
 @media screen and (min-width: 1024px) {
+
     .container-titulo,
     .container-titulo-negrito {
-        font-family: var(--fonte-secundaria);
+        font-family: var(--fonte-secundario);
         font-size: 30px;
     }
+
     .container-titulo {
         font-weight: 400;
         display: block;
     }
+
     .container-titulo-negrito {
         font-weight: 700;
     }
+
+    .opcoes {
+        display: flex;
+    }
+
+    .opcoes-item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opcoes-link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container-imagem-transparente {
+        display: none;
+    }
+
+    .cabecalho-menu-hamburguer {
+        display: none;
+    }
+
+    .opcoes-botao:checked~.lista-menu {
+        display: block;
+        width: auto;
+    }
+
+    .opcoes-botao {
+        display: none;
+    }
+
+    .opcoes-botao:checked~.opcoes-rotulo>.opcoes-item {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .opcoes-item {
+        padding: 2em 1em;
+    }
+
+    .lista-menu-item:hover {
+        background: var(--azul-degrade);
+    }
+
+    .lista-menu-item:hover>.lista-menu-link {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
+
 }
-.container-titulo {
-    display: none;
+
+@media screen and (min-width: 1728px) {
+    .container-link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+        padding-right: 30px;
+    }
+
+    .opcoes {
+        margin-right: auto;
+    }
+
+    .container-texto {
+        display: block;
+    }
+
 }
+
