--- a/topicos.css
+++ b/topicos.css
@@ -25,11 +25,16 @@
      font-weight: 700;
  }
  @media screen and (min-width: 1024px) {
-    .topicos-titulo {
-    font-size: 24px;
-    
-    }
-    }
-    .topicos-link {
-        font-size: 24px;
-    }
+     .topicos-titulo {
+     font-size: 24px;
+     
+     }
+ .topicos-link {
+     font-size: 24px;
+ }
+ }
+ @media screen and (min-width: 1728px) {
+     .topicos{
+         padding: 3em 30vw;
+     }
+ }
