--- a/banner.css
+++ b/banner.css
@@ -1,18 +1,21 @@
-.banner{
-    background-color: var(--azul-degrade);
+.banner {
+    background: var(--azul-degrade);
     color: var(--branco);
     text-align: center;
     padding: 2.5em 2em;
 }
-.banner-titulo{
+
+.banner-titulo {
     font-size: 18px;
     font-weight: 700;
 }
-.banner-titulo{
+
+.banner-texto {
     font-weight: 500;
     margin: 1em 0;
 }
-.banner-pesquisa{
+
+.banner-pesquisa {
     background-color: transparent;
     border: 1px solid var(--branco);
     color: var(--branco);
@@ -20,36 +23,46 @@
     padding: 1em;
     width: 100%;
 }
-.banner-pesquisa ::placeholder{
+
+.banner-pesquisa::placeholder {
     font-family: var(--fonte-principal);
     font-size: 14px;
     font-weight: 400;
     text-align: center;
     color: var(--branco);
-    background: url("./img/image\ copy\ 5.png");
+    background: url  ("./img/image\ copy\ 5.png");no-repeat;
     background-position: 1em;
 }
+
 @media screen and (min-width: 1024px) {
     .banner-titulo {
         font-size: 36px;
     }
+
     .banner-pesquisa {
         width: 50%;
     }
+
     .banner-pesquisa::placeholder {
         background-position: 7em;
     }
 }
-@media screen and (min-width: 1024px) {
-    .banner-titulo {
-    font-size: 36px;
-    
-    }
-    }
+
+
+
+@media screen and (min-width: 1728px) {
     .banner-pesquisa {
-        width: 50%;
-    }
-    .banner-pesquisa::placeholder {
-        background-position: 7em;
+        width: 35%;
     }
 
+    .banner {
+        padding: 6em 0;
+    }
+
+    .banner-pesquisa::placeholder {
+        background-position: 12em;
+    }
+
+
+}  
+    
