--- a/banner.css
+++ b/banner.css
@@ -30,7 +30,7 @@
     font-weight: 400;
     text-align: center;
     color: var(--branco);
-    background: url  ("./img/image\ copy\ 5.png");no-repeat;
+    background: url("./img/search_black_24dp\ 1.png") no-repeat;
     background-position: 1em;
 }
 
@@ -65,4 +65,3 @@
 
 
 }  
-    
